[package]
name = "rust-mevp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "3.0.0"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = "1.38.0"
once_cell = "1.19.0"
toml = "0.8.14"
regex = "1.10.5"
log = "0.4.22"
futures = "0.3.30"
env_logger = "0.11.3"
enr = {version = "0.12.1"}
hex = {version = "0.4.3" }
reth-eth-wire = {git = "https://github.com/paradigmxyz/reth.git", rev="35ab924c0311f4d896e2f5a13317f11d26e79e99"}
reth-discv4 = {git = "https://github.com/paradigmxyz/reth.git", rev="35ab924c0311f4d896e2f5a13317f11d26e79e99"}
reth-network-peers = {git = "https://github.com/paradigmxyz/reth.git", rev="35ab924c0311f4d896e2f5a13317f11d26e79e99"}
reth-ecies = {git = "https://github.com/paradigmxyz/reth.git", rev="35ab924c0311f4d896e2f5a13317f11d26e79e99"}
alloy-primitives = "0.7.7"
tokio-stream = "0.1.15"
tokio-util = {version="0.7.11", features=["codec"]}
alloy-rlp = "0.3.7"
eyre = {version="0.6.12", features=["auto-install"]}
reqwest = {version = "0.11.27", features=["json"]}
tokio-tungstenite = "0.23.1"
